--- a/styles/themes/base/components/button-group.css
+++ b/styles/themes/base/components/button-group.css
@@ -1,41 +1,41 @@
-.ld-button-group-buttons-wrapper {
+.chili-button-group-buttons-wrapper {
   display: flex;
 }
 
-.ld-button-disabled {
+.chili-button-disabled {
   filter: opacity(50%);
 
-  .ld-button-group-item {
+  .chili-button-group-item {
     &:hover {
       background-color: var(--chili-btn-bg-color);
       border-color: var(--chili-btn-border-color);
       cursor: not-allowed;
     }
-    .ld-button-active:hover {
+    .chili-button-active:hover {
       background-color: var(--chili-btn-group-active-color);
       border-color: var(--chili-btn-group-active-color);
     }
   }
 }
 
-.ld-button-group-item {
+.chili-button-group-item {
   border-radius: 0;
   border-inline-width: var(--chili-btn-group-border-inline-width);
   border-block-width: var(--chili-btn-group-border-width);
 
-  &.ld-button-first {
+  &.chili-button-first {
     border-radius: var(--chili-btn-border-radius) 0 0
       var(--chili-btn-border-radius);
     border-inline-start-width: var(--chili-btn-group-border-width);
   }
 
-  &.ld-button-last {
+  &.chili-button-last {
     border-radius: 0 var(--chili-btn-border-radius)
       var(--chili-btn-border-radius) 0;
     border-inline-end-width: var(--chili-btn-group-border-width);
   }
 
-  &.ld-button-active {
+  &.chili-button-active {
     background-color: var(--chili-btn-group-active-color);
     border-color: var(--chili-btn-group-active-color);
     color: var(--chili-btn-group-active-text-color);
