--- a/styles/themes/base/components/pagination.css
+++ b/styles/themes/base/components/pagination.css
@@ -1,9 +1,9 @@
-.ld-pagination-wrapper {
+.chili-pagination-wrapper {
   display: flex;
   align-items: center;
 }
 
-.ld-pagination-button {
+.chili-pagination-button {
   margin-inline: var(--chili-pagination-button-margin-inline);
   width: var(--chili-pagination-button-size);
   height: var(--chili-pagination-button-size);
@@ -19,27 +19,27 @@
   }
 }
 
-.ld-pagination-controls {
+.chili-pagination-controls {
   color: var(--chili-pagination-control-color);
   &:hover {
     color: var(--chili-pagination-control-color-hover);
   }
 }
 
-.ld-pagination-numbers {
+.chili-pagination-numbers {
   display: flex;
   list-style: none;
   order: 2;
 }
 
-.ld-pagination-number-selected {
+.chili-pagination-number-selected {
   font-weight: bold;
   cursor: default;
   font-size: var(--chili-pagination-number-selected-font-size);
   color: var(--chili-pagination-number-selected-color);
 }
 
-.ld-pagination-options-wrapper {
+.chili-pagination-options-wrapper {
   display: flex;
   flex: 1;
   justify-content: flex-end;
@@ -47,16 +47,16 @@
   align-items: baseline;
 }
 
-.ld-pagination-options {
+.chili-pagination-options {
   width: var(--chili-pagination-options-dropdown-width);
 }
 
-.ld-pagination-options-label {
+.chili-pagination-options-label {
   margin-inline-end: var(--chili-pagination-options-label-margin-inline-end);
   color: var(--chili-pagination-options-label-color);
 }
 
-.ld-pagination-info-label {
+.chili-pagination-info-label {
   display: flex;
   flex: 1;
   order: 3;
@@ -64,7 +64,7 @@
   color: var(--chili-pagination-info-label-color);
 }
 
-.ld-pagination-disabled {
+.chili-pagination-disabled {
   color: var(--chili-pagination-disabled-color);
   cursor: not-allowed;
 
