--- a/styles/themes/base/components/radio.css
+++ b/styles/themes/base/components/radio.css
@@ -1,4 +1,4 @@
-.ld-radio-label {
+.chili-radio-label {
   padding-left: 25px;
   display: inline-flex;
   position: relative;
@@ -31,14 +31,14 @@
   }
 }
 
-.ld-radio-input {
+.chili-radio-input {
   position: absolute;
   opacity: 0;
   width: 0;
   height: 0;
   pointer-events: none;
 
-  &:checked + .ld-radio-label {
+  &:checked + .chili-radio-label {
     &::after {
       background-color: var(--chili-radio-active-contrast-color);
     }
@@ -49,7 +49,7 @@
     }
   }
 
-  &:disabled + .ld-radio-label {
+  &:disabled + .chili-radio-label {
     cursor: not-allowed;
 
     &::before {
@@ -65,7 +65,7 @@
     }
   }
 
-  &:checked:disabled + .ld-radio-label::after {
+  &:checked:disabled + .chili-radio-label::after {
     background-color: var(--chili-radio-contrast-color);
   }
 }
