--- a/styles/themes/base/components/switcher.css
+++ b/styles/themes/base/components/switcher.css
@@ -1,4 +1,4 @@
-.ld-switcher-handler {
+.chili-switcher-handler {
   cursor: pointer;
   border-radius: var(--chili-switcher-handler-border-radius);
   transition: all 0.1s linear;
@@ -8,7 +8,7 @@
   background: var(--chili-switcher-handler-bg);
 }
 
-.ld-switcher {
+.chili-switcher {
   vertical-align: middle;
   display: inline-block;
   cursor: pointer;
@@ -16,43 +16,43 @@
   border-radius: var(--chili-switcher-handler-border-radius);
   width: var(--chili-switcher-wrapper-width);
 
-  &:hover .ld-switcher-handler {
+  &:hover .chili-switcher-handler {
     background: var(--chili-switcher-handler-bg-hovered);
   }
 }
 
-.ld-switcher-active {
+.chili-switcher-active {
   background-color: var(--chili-switcher-active-color);
 
-  .ld-switcher-handler {
+  .chili-switcher-handler {
     transform: translateX(100%);
     background: var(--chili-switcher-handler-bg);
   }
 
   &:hover {
-    .ld-switcher-handler {
+    .chili-switcher-handler {
       background-color: var(--chili-switcher-handler-bg-hovered);
     }
   }
 }
 
-.ld-switcher-disabled {
+.chili-switcher-disabled {
   pointer-events: none;
   cursor: not-allowed;
   background: var(--chili-switcher-wrapper-bg-disabled);
-  .ld-switcher-handler {
+  .chili-switcher-handler {
     background-color: var(--chili-switcher-handler-bg-disabled);
   }
 }
 
-.ld-switcher-active.ld-switcher-disabled {
+.chili-switcher-active.chili-switcher-disabled {
   background-color: var(--chili-switcher-handler-bg-disabled);
-  .ld-switcher-handler {
+  .chili-switcher-handler {
     background-color: var(--chili-switcher-handler-bg-disabled);
   }
 }
 
-.ld-switcher-label:not(:empty) {
+.chili-switcher-label:not(:empty) {
   margin-inline-start: var(--chili-switcher-label-margin-inline-start);
   cursor: pointer;
 }
