--- a/styles/themes/base/base.variables.css
+++ b/styles/themes/base/base.variables.css
@@ -286,11 +286,13 @@
   --chili-tag-icon-color-hover: var(--chili-base-color-hover);
   --chili-tag-transition: 250ms ease-out;
 
+  --chili-textarea-bg-color: var(--chili-bg-color);
   --chili-textarea-height: 120px;
   --chili-textarea-padding: 1rem var(--chili-padding-inline);
   --chili-textarea-border: 1px solid var(--chili-base-color);
   --chili-textarea-border-color-hover: var(--chili-base-color-hover);
   --chili-textarea-border-radius: var(--chili-border-radius);
+  --chili-textarea-resize: none;
 
   --chili-tooltip-z-index: 10070;
   --chili-tooltip-max-width: 280px;
