--- a/styles/themes/base/base.variables.css
+++ b/styles/themes/base/base.variables.css
@@ -293,6 +293,7 @@
   --chili-textarea-border-color-hover: var(--chili-base-color-hover);
   --chili-textarea-border-radius: var(--chili-border-radius);
   --chili-textarea-resize: none;
+  --chili-textarea-scrollbar-width: thin;
 
   --chili-tooltip-z-index: 10070;
   --chili-tooltip-max-width: 280px;
